# django-test

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
polls/: forms.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: base.html  results.html  vote.html
polls/templates/registration/: login.html
testsite/: settings.py  urls.py
